--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmailApp"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
 
-        <activity android:name="bravo.mail.emailapp.ui.homemain.HomeActivity"
+        <activity android:name="eu.faircode.email.ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.leftmenu.EditMenuLeftActivity"/>
+        <activity
+            android:name=".ui.setting.SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+        <activity
+            android:name="bravo.mail.emailapp.ui.homemain.HomeActivity"
+            android:exported="true"/>
+        <activity android:name=".ui.leftmenu.EditMenuLeftActivity" />
+        <activity android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.login.WelcomeLoginActivity"/>
+        <activity android:name=".ui.slide.SlideIntroActivity"/>
     </application>
-
 </manifest>
